Closed Bug 774077 Opened 14 years ago Closed 14 years ago

Fix Clang warning in nsSVGGraphicElement.cpp

Categories

(Core :: SVG, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla17

People

(Reporter: jwatt, Assigned: jwatt)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

The only Clang warning in content/svg/content/src is in nsSVGGraphicElement.cpp and is a trivial fix.
Attached patch patchSplinter Review
Attachment #642382 - Flags: review?(dholbert)
Blocks: clang-macosx
Attachment #642382 - Flags: review?(dholbert) → review+
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: