Bug 774077 - Fix Clang warning in nsSVGGraphicElement.cpp. r=dholbert.